--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.3",
     "vite": "^3.0.0"
+  },
+  "dependencies": {
+    "@types/p5": "^1.4.3",
+    "p5": "^1.5.0"
   }
 }
